@@ -6,7 +6,8 @@ AUTOMAKE_OPTIONS = no-dependencies
 noinst_PROGRAMS = connect server fontl puzzle
 
 
-LDADD= $(top_builddir)/WINGs/libWINGs.a $(top_builddir)/wrlib/libwraster.la
+LDADD= $(top_builddir)/WINGs/libWINGs.a $(top_builddir)/wrlib/libwraster.la \
+	@INTLIBS@
 
 
 fontl_DEPENDENCIES = $(top_builddir)/WINGs/libWINGs.a
@@ -16,11 +17,12 @@ puzzle_DEPENDENCIES = $(top_builddir)/WINGs/libWINGs.a
 connect_DEPENDENCIES = $(top_builddir)/WINGs/libWUtil.a
 
 connect_LDADD = $(top_builddir)/WINGs/libWUtil.a @LIBRARY_SEARCH_PATH@ \
-	@NETLIBS@
+	@NETLIBS@ @INTLIBS@
 
 server_DEPENDENCIES = $(top_builddir)/WINGs/libWUtil.a
 
-server_LDADD = $(top_builddir)/WINGs/libWUtil.a @LIBRARY_SEARCH_PATH@ @NETLIBS@
+server_LDADD = $(top_builddir)/WINGs/libWUtil.a @LIBRARY_SEARCH_PATH@ \
+	@NETLIBS@ @INTLIBS@
 
 
 INCLUDES = -I$(top_srcdir)/WINGs -I$(top_srcdir)/wrlib -I$(top_srcdir)/src \
