@@ -4,7 +4,8 @@ AUTOMAKE_OPTIONS = no-dependencies
 
 noinst_PROGRAMS = wtest wmquery wmfile testmywidget 
 
-LDADD= $(top_builddir)/WINGs/libWINGs.a $(top_builddir)/wrlib/libwraster.la
+LDADD= $(top_builddir)/WINGs/libWINGs.a $(top_builddir)/wrlib/libwraster.la \
+	@INTLIBS@
 
 
 testmywidget_SOURCES = testmywidget.c mywidget.c mywidget.h 
