@@ -18,7 +18,7 @@ INCLUDES = $(DFLAGS) -I$(top_srcdir)/WINGs -I$(top_srcdir)/wrlib \
 # X_EXTRA_LIBS is for libproplist in systems that need -lsocket
 # remove after we require lPL 0.10.2 which automatically resolves its
 # library dependancies using the libPropList.la file
-liblist= @LIBRARY_SEARCH_PATH@ @X_EXTRA_LIBS@
+liblist= @LIBRARY_SEARCH_PATH@ @X_EXTRA_LIBS@ @INTLIBS@
 
 wdwrite_LDADD = $(top_builddir)/WINGs/libWUtil.a $(liblist)
 
@@ -41,17 +41,17 @@ geticonset_LDADD= $(top_builddir)/WINGs/libWUtil.a $(liblist)
 wmagnify_LDADD = \
 	$(top_builddir)/WINGs/libWINGs.a \
 	$(top_builddir)/wrlib/libwraster.la \
-	@DLLIBS@
+	@INTLIBS@ @DLLIBS@
 
 wmsetup_LDADD = \
 	$(top_builddir)/WINGs/libWINGs.a \
 	$(top_builddir)/wrlib/libwraster.la \
-	@DLLIBS@
+	@INTLIBS@ @DLLIBS@
 
 wmsetbg_LDADD = \
 	$(top_builddir)/WINGs/libWINGs.a \
 	$(top_builddir)/wrlib/libwraster.la \
-	@DLLIBS@
+	@INTLIBS@ @DLLIBS@
 
 CLEANFILES = wmaker.inst wmchlocale
 
