@@ -4,6 +4,9 @@ Changes since version 0.70.0:
 - Disabled window birth animation by default (while it was ok with normal 
   windows, it was very annoying with menus editing in WPrefs.app)
 - Added ability to shade/unshade a window using the mouse wheel.
+- Fixed compilation for systems that required -lintl for WINGs
+  (Jim Knoble <jmknoble@pobox.com>)
+- Removed redundant include/lib paths from the get-*-flags scripts
 
 
 Changes since version 0.65.1:
